# sim-circuit

./: Cargo.toml  README.md
.github/workflows/: main.yml
example_circuits/a_plus_b/: circuit.txt  circuit_info.json  circuit_input.json
example_circuits/mat_mul/: circuit.txt  circuit_info.json  circuit_input.json
src/: arithmetic_circuit.rs  circuit.rs  execution.rs  lib.rs  main.rs  model.rs  number.rs  number_u32.rs  simulate.rs
tests/: binary.rs  matrix_mul.rs  x_mul_x.rs
